# backend-ai-hack

./: .gitignore  current_params.json  database.py  main.py  pyproject.toml  requirements.txt  test.csv  test.py  test_1.py
models/: db_models.py
router/: chat.py  conversation.py
services/: blob_storage.py  case_analysis.py  chat_service.py  drilldown_service.py  insight_generator.py  log_parser.py  process_miner.py  question_analyzer.py  simulator.py
