[project]
name = "fastapi-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "celery>=5.6.3",
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pm4py>=2.7.22.5",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "scipy>=1.17.1",
    "simpy>=4.1.2",
    "uvicorn>=0.49.0",
]
